--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -14,7 +14,7 @@
     <div id="particles-js" class="position-absolute w-100 h-100"></div>
 
     <!-- Content -->
-    <div class="d-flex align-items-center position-relative">
+    <div class="d-flex align-items-center position-relative header_intro">
         <div class="row w-100 mx-0 align-items-center">
             <!-- Texte et boutons -->
             <div class="col-lg-7 col-md-12 d-flex flex-column justify-content-center px-4 px-md-5 text-center text-lg-start mb-4 mb-lg-0 intro_mobile">
@@ -27,9 +27,9 @@
                 <p class="fs-5 mb-4 text-white">
                     Faites confiance à une équipe d'experts passionnés pour transformer vos défis numériques en succès mesurables. Grâce à nos outils et technologies de pointe, nous vous aidons à propulser votre activité tout en restant compétitif dans un monde digital en constante évolution.
                 </p>
-                <div class="d-flex flex-column flex-md-row gap-3 justify-content-center">
-                    <a href="{{ url('front_contact') }}" class="btn btn-warning btn-lg mb-2">Obtenez votre audit gratuit</a>
-                    <a href="{{ url('front_devis_new') }}" class="btn btn-outline-light btn-lg mt-4">Demandez un devis personnalisé</a>
+                <div class="d-flex flex-column flex-md-row gap-3 justify-content-center button_intro">
+                    <a href="{{ url('front_contact') }}">Obtenez votre audit gratuit</a>
+                    <a href="{{ url('front_devis_new') }}">Demandez un devis personnalisé</a>
                 </div>
             </div>
 
