--- a/templates/front/contact/contact.html.twig
+++ b/templates/front/contact/contact.html.twig
@@ -9,12 +9,12 @@
 
 			<blockquote>
 				<a href="tel:0762972691" style="text-decoration: underline;">Téléphone: +33 7 62 97 26 91</a><br>
-				<a href="mailto:wbelbeche.s@gmail.com">Mail: wbelbeche.s@gmail.com</a>
+				<a href="mailto:w.belbeche@scriptzenit.fr">Mail: w.belbeche@scriptzenit.fr</a>
 			</blockquote>
 		</div>
 		<div class="mb-4">
 			<a href="tel:0762972691" class="btn btn-primary">Appelez-moi !</a>
-			<a href="mailto:wbelbeche.s@gmail.com" class="btn btn-secondary">Contactez-moi par email !</a>
+			<a href="mailto:w.belbeche@scriptzenit.fr" class="btn btn-secondary">Contactez-moi par email !</a>
 		</div>
 	</div>
 
