--- a/templates/front/devis/new.html.twig
+++ b/templates/front/devis/new.html.twig
@@ -45,9 +45,6 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title" id="combinedModalLabel">Explications sur les Types de Sites Web et les Choix de Design</h5>
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
 					</div>
 					<div class="modal-body">
 						<!-- Explications pour les Types de Sites Web -->
@@ -127,7 +124,7 @@
 				{{ form_row(formDevis.attentes_design_web)}}
 				{{ form_errors(formDevis.attentes_design_web)}}
 
-				<label for="">Parlez moi un peu plus de votre projet !</label>
+				<label for="">Parlez-nous un peu plus de votre projet !</label>
 				{{ form_row(formDevis.description_projet)}}
 				{{ form_errors(formDevis.description_projet)}}
 
