--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,7 @@
 		<!-- /Scroll To Top Button -->
 
 		<div class="page-scroll">
-			<div id="page_container" class="bg-move-effect">
+			<div id="page_container" class="bg-move-effect mb-5">
 				{% block navbar %}
 					{% include "front/includes/nav.html.twig" %}
 				{% endblock %}
@@ -67,15 +67,10 @@
 						</p>
 					</div>
 				</section>#}
-
-				<div class="container-fluid">
-					{% for type, messages in app.flashes %}
-						{% for message in messages %}
-							<div class="alert alert-{{ type }}">{{ message }}</div>
-						{% endfor %}
-					{% endfor %}
-				</div>
-				{% block content %} {% endblock %}
+				
+				{% block content %} 
+					{% include "front/includes/_message.html.twig" %}
+				{% endblock %}
 
 				{% include "front/includes/footer.html.twig" %}
 
