--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -34,6 +34,9 @@
                 <li class="nav-item {{ app.request.get('_route') == 'front_devis_new' ? 'active' : '' }}">
                     <a class="nav-link" href="{{ url('front_devis_new') }}">Faire une demande</a>
                 </li>
+                <li class="nav-item {{ app.request.get('_route') == 'front_contact' ? 'active' : '' }}">
+                    <a class="nav-link" href="{{ url('front_contact') }}">Contact</a>
+                </li>
                 <div class="user">
                     {% if not app.user %}
                         <li class="nav-item {{ app.request.get('_route') == 'app_register' ? 'active' : '' }}">
