--- a/templates/front/profil/user_response_subject.html.twig
+++ b/templates/front/profil/user_response_subject.html.twig
@@ -6,7 +6,7 @@
 
     <!-- Page Title
 		============================================= -->
-    <section class="page-title bg-color border-bottom-0">
+    <section class="page-title bg-color border-bottom-0 mt-7">
         <div class="container">
             <div class="page-title-row">
 
