--- a/templates/front/ticket/index.html.twig
+++ b/templates/front/ticket/index.html.twig
@@ -1,49 +1,83 @@
-{% extends 'base_back.html.twig' %}
+{% extends 'base.html.twig' %}
 
-{% block title %}Gestion tickets{% endblock %}
+{% block title %}Assistance - Tickets{% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
-        <div class="table-responsive table-responsive-lg table-responsive-md">
-            <table class="table table-sm">
-                <thead class="thead-dark">
-                <tr>
-                    <th>Numéro</th>
-                    <th>Email</th>
-                    <th>Type de site web</th>
-                    <th>Type de design</th>
-                    <th>Description de la demande</th>
-                    <th>Date de création</th>
-                    <th>Status</th>
-                    <th>Actions</th>
-                </tr>
+<div class="container mt-7">
+    {% for type, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ type }}">{{ message }}</div>
+            {% endfor %}
+    {% endfor %}
+
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h1 class="h3 fw-bold">Gestion des Tickets</h1>
+        <a href="{{ path('send_message') }}" class="btn btn-primary">Créer un nouveau Ticket d'assistance</a>
+    </div>
+
+    {% if tickets|length > 0 %}
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead class="thead-light">
+                    <tr>
+                        <th>#</th>
+                        <th>Email</th>
+                        <th>Type de site web</th>
+                        <th>Type de design</th>
+                        <th>Description</th>
+                        <th>Date de création</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
                 </thead>
                 <tbody>
-                {% for message in tickets %}
-                    <tr>
-                        <td>{{ message.id }}</td>
-                        <td>{{ message.sender }}</td>
-                        <td>{{ message.devis.typeDeSiteWeb }}</td>
-                        <td>
-                            {% for labelOfDesign in message.devis.attentesDesignWeb %}
-                                {{ labelOfDesign.label }}{% if not loop.last %}, {% endif %}
-                            {% endfor %}
-                        </td>
-                        <td>{{ message.content }}</td>
-                        <td>{{ message.createdAt|date('Y-m-d H:i:s') }}</td>
-                        <td>{{ message.status }}</td>
-                        <td>
-                            <a href="{{ path('respond_to_ticket', {'id': message.id}) }}" class="btn btn-outline-primary">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder-plus" viewBox="0 0 16 16">
-                                    <path d="m.5 3 .04.87a1.99 1.99 0 0 0-.342 1.311l.637 7A2 2 0 0 0 2.826 14H9v-1H2.826a1 1 0 0 1-.995-.91l-.637-7A1 1 0 0 1 2.19 4h11.62a1 1 0 0 1 .996 1.09L14.54 8h1.005l.256-2.819A2 2 0 0 0 13.81 3H9.828a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 6.172 1H2.5a2 2 0 0 0-2 2Zm5.672-1a1 1 0 0 1 .707.293L7.586 3H2.19c-.24 0-.47.042-.683.12L1.5 2.98a1 1 0 0 1 1-.98h3.672Z"/>
-                                    <path d="M13.5 9a.5.5 0 0 1 .5.5V11h1.5a.5.5 0 1 1 0 1H14v1.5a.5.5 0 1 1-1 0V12h-1.5a.5.5 0 0 1 0-1H13V9.5a.5.5 0 0 1 .5-.5Z"/>
-                                </svg>
-                            </a>
-                        </td>
-                    </tr>
-                {% endfor %}
+                    {% for message in tickets %}
+                        <tr>
+                            <td>{{ message.id }}</td>
+                            <td>{{ message.sender.email }}</td>
+                            <td>{{ message.devis.typeDeSiteWeb }}</td>
+                            <td>
+                                {% for design in message.devis.attentesDesignWeb %}
+                                    {{ design.label }}{% if not loop.last %}, {% endif %}
+                                {% endfor %}
+                            </td>
+                            <td class="text-truncate" style="max-width: 200px;">
+                                {{ message.content|length > 100 ? message.content|slice(0, 100) ~ '...' : message.content }}
+                            </td>
+                            <td>{{ message.createdAt|date('d/m/Y H:i') }}</td>
+                            <td>
+                                <span class="badge 
+                                    {% if message.status == 'en_attente' %}bg-warning
+                                    {% elseif message.status == 'en_cours' %}bg-primary
+                                    {% elseif message.status == 'resolu' %}bg-success
+                                    {% else %}bg-secondary{% endif %}">
+                                    {{ message.status|capitalize }}
+                                </span>
+                            </td>
+                            <td>
+                                <a href="{{ path('respond_to_ticket', {'id': message.id}) }}" class="btn btn-outline-primary btn-sm" title="Répondre">
+                                    <i class="bi bi-reply"></i> Répondre
+                                </a>
+                                <a href="{{ path('front_ticket_details', {'id': message.id}) }}" class="btn btn-outline-secondary btn-sm" title="Voir Détails">
+                                    <i class="bi bi-eye"></i> Voir
+                                </a>
+                               {# <form action="{{ path('front_delete_ticket', {'id': message.id}) }}" method="post" onsubmit="return confirm('Voulez-vous vraiment supprimer ce ticket ?');">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ message.id) }}">
+                                    <button type="submit" class="btn btn-danger">
+                                        <i class="bi bi-trash"></i> Supprimer
+                                    </button>
+                                </form> #}
+                            </td>
+                        </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
-    </div>
+    {% else %}
+        <div class="alert mt-4">
+            <h5 class="alert-heading">Aucun ticket trouvé</h5>
+            <p>Vous n'avez aucun ticket d'assistance pour le moment. Vous pouvez créer un devis ou demander de l'aide en cas de besoin.</p>
+        </div>
+    {% endif %}
+</div>
 {% endblock %}
