fixed some issues

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -339,7 +339,6 @@
             { 'img': 'spec-3.png', 'name': 'Git + SSH' },
             { 'img': 'spec-4.png', 'name': 'Symfony' },
             { 'img': 'spec-5.svg', 'name': 'VueJS' },
-            { 'img': 'spec-14.png', 'name': 'React' },
             { 'img': 'spec-10.png', 'name': 'Next.js' },
             { 'img': 'spec-11.png', 'name': 'WebSocket (Socket.io)' },
             { 'img': 'spec-12.png', 'name': 'Node.js' },
@@ -347,7 +346,15 @@
             { 'img': 'spec-8.svg', 'name': 'Json web token' },
             { 'img': 'spec-9.png', 'name': 'Axios/Ajax' },
             { 'img': 'shopify-logo.svg', 'name': 'Shopify' },
-            { 'img': 'spec-13.png', 'name': 'WordPress' }
+            { 'img': 'spec-13.png', 'name': 'WordPress' },
+            { 'img': 'spec-14.png', 'name': 'React' },
+            { 'img': 'spec-15.png', 'name': 'Jira' },
+            { 'img': 'spec-16.png', 'name': 'Trello' },
+            { 'img': 'spec-17.png', 'name': 'Visual Studio Code' },
+            { 'img': 'spec-18.svg', 'name': 'PHP Storm' },
+            { 'img': 'spec-19.png', 'name': 'PostMan' },
+            { 'img': 'spec-20.png', 'name': 'Docker' },
+            { 'img': 'spec-22.png', 'name': 'TS/JS' }
         ] %}
         {% for tool in tools %}
             <div class="col-xs-12 col-sm-3">
