--- a/templates/front/projets/show.html.twig
+++ b/templates/front/projets/show.html.twig
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container">
 
     <!-- Portfolio Item Heading -->
-    <h1 class="my-4">{{ project.title }}
+    <h1 class="mt-6 my-4">{{ project.title }}
         <small>Par {{ project.developer }}</small>
     </h1>
 
