--- a/templates/front/administrative/mentions.html.twig
+++ b/templates/front/administrative/mentions.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div class="container my-5">
+    <div class="container mt-7">
         <h1 class="display-4 mb-4 text-center">Mentions légales</h1>
         <p class="lead text-center">En vigueur au 19/08/2023</p>
 
